# search

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  example_packages.ini  install.sh  make_pkg  package.ini  package.ini.bak
.old/rust_version/src/: main.rs
.versions/: versions.txt
.versions/03.17.26 : 1.1.1/: install.sh
.versions/03.17.26 : 1.1.1/src/: config.lua  main.cc
.versions/03.17.26 : 1.1.1/src/include/: utilities.h
src/: colorMe.cc  config.conf  config.lua  configManager.cc  logs.cc  main.cc  main.rs  search.cc
src/include/: utilities.h  utilities.hh
